--- a/module-3/hw-4-ml/spark_ml/notebooks/create_spark_model.ipynb
+++ b/module-3/hw-4-ml/spark_ml/notebooks/create_spark_model.ipynb
@@ -6,10 +6,30 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "Intitializing Scala interpreter ..."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Spark Web UI available at http://36de47ca6b01:4040\n",
+       "SparkContext available as 'sc' (version = 3.0.0, master = local[*], app id = local-1595854352173)\n",
+       "SparkSession available as 'spark'\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current spark version is 2.4.4\n"
+      "Current spark version is 3.0.0\n"
      ]
     }
    ],
@@ -38,19 +58,10 @@
     {
      "data": {
       "text/plain": [
-       "dataSchema = StructType(StructField(target,IntegerType,true), StructField(id,LongType,true), StructField(raw_timestamp,StringType,true), StructField(query_status,StringType,true), StructField(author,StringType,true), StructField(tweet,StringType,true))\n",
-       "dataPath = /home/jovyan/data/training.1600000.processed.noemoticon.csv\n",
-       "raw_sentiment = [label: int, tweet: string]\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data",
-     "source": "user"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[label: int, tweet: string]"
+       "import org.apache.spark.sql.types.{StructType, StructField, IntegerType, LongType, StringType}\n",
+       "dataSchema: org.apache.spark.sql.types.StructType = StructType(StructField(target,IntegerType,true), StructField(id,LongType,true), StructField(raw_timestamp,StringType,true), StructField(query_status,StringType,true), StructField(author,StringType,true), StructField(tweet,StringType,true))\n",
+       "dataPath: String = /home/jovyan/data/training.1600000.processed.noemoticon.csv\n",
+       "raw_sentiment: org.apache.spark.sql.DataFrame = [label: int, tweet: string]\n"
       ]
      },
      "execution_count": 2,
@@ -83,36 +94,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tokenizer = tok_0ce65476c51e\n",
-       "hashingTF = hashingTF_52cb9258625b\n",
-       "lr = logreg_494752c9ee0a\n",
-       "pipeline = pipeline_bd0c7af38690\n"
+       "import org.apache.spark.ml.{Pipeline, PipelineModel}\n",
+       "import org.apache.spark.ml.classification.{RandomForestClassificationModel, RandomForestClassifier}\n",
+       "import org.apache.spark.ml.feature.{HashingTF, Tokenizer}\n",
+       "import org.apache.spark.ml.linalg.Vector\n",
+       "import org.apache.spark.sql.Row\n",
+       "tokenizer: org.apache.spark.ml.feature.Tokenizer = tok_df45b2192b6b\n",
+       "hashingTF: org.apache.spark.ml.feature.HashingTF = HashingTF: uid=hashingTF_f553313f3147, binary=false, numFeatures=1000\n",
+       "rf: org.apache.spark.ml.classification.RandomForestClassifier = rfc_f6a776d80ec9\n",
+       "pipeline: org.apache.spark.ml.Pipeline = pipeline_fa230c4baa13\n"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data",
-     "source": "user"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "pipeline_bd0c7af38690"
-      ]
-     },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import org.apache.spark.ml.{Pipeline, PipelineModel}\n",
-    "import org.apache.spark.ml.classification.LogisticRegression\n",
+    "// import org.apache.spark.ml.classification.LogisticRegression\n",
+    "import org.apache.spark.ml.classification.{RandomForestClassificationModel, RandomForestClassifier}\n",
     "import org.apache.spark.ml.feature.{HashingTF, Tokenizer}\n",
     "import org.apache.spark.ml.linalg.Vector\n",
     "import org.apache.spark.sql.Row\n",
@@ -126,36 +133,31 @@
     "    .setInputCol(tokenizer.getOutputCol)\n",
     "    .setOutputCol(\"features\")\n",
     "\n",
-    "val lr = new LogisticRegression()\n",
-    "    .setMaxIter(10)\n",
-    "    .setRegParam(0.001)\n",
+    "// RandomForest\n",
+    "val rf = new RandomForestClassifier()\n",
+    "  .setLabelCol(\"label\")\n",
+    "  .setFeaturesCol(\"features\")\n",
+    "  .setNumTrees(10)\n",
+    "// val lr = new LogisticRegression()\n",
+    "//     .setMaxIter(10)\n",
+    "//     .setRegParam(0.001)\n",
     "\n",
     "val pipeline = new Pipeline()\n",
-    "  .setStages(Array(tokenizer, hashingTF, lr))\n"
+    "  .setStages(Array(tokenizer, hashingTF, rf))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "model = pipeline_bd0c7af38690\n"
+       "model: org.apache.spark.ml.PipelineModel = pipeline_fa230c4baa13\n"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data",
-     "source": "user"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "pipeline_bd0c7af38690"
-      ]
-     },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,26 +177,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "sameModel = pipeline_bd0c7af38690\n"
+       "sameModel: org.apache.spark.ml.PipelineModel = pipeline_fa230c4baa13\n"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data",
-     "source": "user"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "pipeline_bd0c7af38690"
-      ]
-     },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -217,26 +209,26 @@
       "+-----+--------------------+--------------------+--------------------+--------------------+--------------------+----------+\n",
       "|label|               tweet|               words|            features|       rawPrediction|         probability|prediction|\n",
       "+-----+--------------------+--------------------+--------------------+--------------------+--------------------+----------+\n",
-      "|    0|@switchfoot http:...|[@switchfoot, htt...|(1000,[7,14,21,54...|[-0.9010125659403...|[0.28884245921783...|       1.0|\n",
-      "|    0|is upset that he ...|[is, upset, that,...|(1000,[170,193,22...|[1.84195706807746...|[0.86318000204742...|       0.0|\n",
-      "|    0|@Kenichan I dived...|[@kenichan, i, di...|(1000,[10,36,77,1...|[1.56488554961140...|[0.82705328017345...|       0.0|\n",
-      "|    0|my whole body fee...|[my, whole, body,...|(1000,[82,191,296...|[0.22286270195627...|[0.55548620895353...|       0.0|\n",
-      "|    0|@nationwideclass ...|[@nationwideclass...|(1000,[18,96,130,...|[3.23587893775227...|[0.96216236372478...|       0.0|\n",
-      "|    0|@Kwesidei not the...|[@kwesidei, not, ...|(1000,[18,223,710...|[0.33263478812923...|[0.58240032293821...|       0.0|\n",
-      "|    0|         Need a hug |      [need, a, hug]|(1000,[48,170,537...|[0.09849092454166...|[0.52460284610183...|       0.0|\n",
-      "|    0|@LOLTrish hey  lo...|[@loltrish, hey, ...|(1000,[139,157,17...|[-2.3498070018591...|[0.08708111418259...|       1.0|\n",
-      "|    0|@Tatiana_K nope t...|[@tatiana_k, nope...|(1000,[48,234,299...|[0.82843417404240...|[0.69602374240050...|       0.0|\n",
-      "|    0|@twittera que me ...|[@twittera, que, ...|(1000,[161,324,47...|[-0.1308461051980...|[0.46733506429694...|       1.0|\n",
-      "|    0|spring break in p...|[spring, break, i...|(1000,[13,193,301...|[0.24494144760053...|[0.56093102965737...|       0.0|\n",
-      "|    0|I just re-pierced...|[i, just, re-pier...|(1000,[307,329,47...|[-0.3966128922924...|[0.40212640024549...|       1.0|\n",
-      "|    0|@caregiving I cou...|[@caregiving, i, ...|(1000,[56,202,234...|[0.69361421378521...|[0.66677044374806...|       0.0|\n",
-      "|    0|@octolinz16 It it...|[@octolinz16, it,...|(1000,[126,230,32...|[0.03456400299105...|[0.50864014058827...|       0.0|\n",
-      "|    0|@smarrison i woul...|[@smarrison, i, w...|(1000,[18,83,170,...|[2.98112687604560...|[0.95171418244474...|       0.0|\n",
-      "|    0|@iamjazzyfizzle I...|[@iamjazzyfizzle,...|(1000,[7,71,202,2...|[1.27944368971444...|[0.78235506522531...|       0.0|\n",
-      "|    0|Hollis' death sce...|[hollis', death, ...|(1000,[2,3,18,82,...|[1.03425575867712...|[0.73774013113595...|       0.0|\n",
-      "|    0|about to file taxes |[about, to, file,...|(1000,[108,388,48...|[-0.1130725419213...|[0.47176194434631...|       1.0|\n",
-      "|    0|@LettyA ahh ive a...|[@lettya, ahh, iv...|(1000,[13,107,201...|[-0.9205369385656...|[0.28484850199880...|       1.0|\n",
-      "|    0|@FakerPattyPattz ...|[@fakerpattypattz...|(1000,[53,102,154...|[-1.1212832164232...|[0.24577333766527...|       1.0|\n",
+      "|    0|@switchfoot http:...|[@switchfoot, htt...|(1000,[10,21,81,1...|[4.69923926724613...|[0.46992392672461...|       1.0|\n",
+      "|    0|is upset that he ...|[is, upset, that,...|(1000,[121,193,20...|[4.82054962490642...|[0.48205496249064...|       1.0|\n",
+      "|    0|@Kenichan I dived...|[@kenichan, i, di...|(1000,[17,185,188...|[5.25858516766473...|[0.52585851676647...|       0.0|\n",
+      "|    0|my whole body fee...|[my, whole, body,...|(1000,[191,330,44...|[5.19676997473920...|[0.51967699747392...|       0.0|\n",
+      "|    0|@nationwideclass ...|[@nationwideclass...|(1000,[32,162,166...|[4.96198213089592...|[0.49619821308959...|       1.0|\n",
+      "|    0|@Kwesidei not the...|[@kwesidei, not, ...|(1000,[17,205,405...|[5.06476450317545...|[0.50647645031754...|       0.0|\n",
+      "|    0|         Need a hug |      [need, a, hug]|(1000,[467,537,73...|[5.06672487027522...|[0.50667248702752...|       0.0|\n",
+      "|    0|@LOLTrish hey  lo...|[@loltrish, hey, ...|(1000,[157,166,26...|[4.07693682948160...|[0.40769368294816...|       1.0|\n",
+      "|    0|@Tatiana_K nope t...|[@tatiana_k, nope...|(1000,[48,234,257...|[4.94921694654593...|[0.49492169465459...|       1.0|\n",
+      "|    0|@twittera que me ...|[@twittera, que, ...|(1000,[67,369,451...|[5.09002596124897...|[0.50900259612489...|       0.0|\n",
+      "|    0|spring break in p...|[spring, break, i...|(1000,[207,437,64...|[4.86096528196380...|[0.48609652819638...|       1.0|\n",
+      "|    0|I just re-pierced...|[i, just, re-pier...|(1000,[307,406,47...|[5.24704297535423...|[0.52470429753542...|       0.0|\n",
+      "|    0|@caregiving I cou...|[@caregiving, i, ...|(1000,[17,55,329,...|[5.02952448837956...|[0.50295244883795...|       0.0|\n",
+      "|    0|@octolinz16 It it...|[@octolinz16, it,...|(1000,[32,281,338...|[4.86779847366189...|[0.48677984736618...|       1.0|\n",
+      "|    0|@smarrison i woul...|[@smarrison, i, w...|(1000,[17,74,112,...|[5.14257516206844...|[0.51425751620684...|       0.0|\n",
+      "|    0|@iamjazzyfizzle I...|[@iamjazzyfizzle,...|(1000,[10,17,54,6...|[5.71444440582098...|[0.57144444058209...|       0.0|\n",
+      "|    0|Hollis' death sce...|[hollis', death, ...|(1000,[3,58,109,1...|[5.06476450317545...|[0.50647645031754...|       0.0|\n",
+      "|    0|about to file taxes |[about, to, file,...|(1000,[108,294,48...|[4.86096528196380...|[0.48609652819638...|       1.0|\n",
+      "|    0|@LettyA ahh ive a...|[@lettya, ahh, iv...|(1000,[11,17,240,...|[4.51220560259774...|[0.45122056025977...|       1.0|\n",
+      "|    0|@FakerPattyPattz ...|[@fakerpattypattz...|(1000,[2,17,216,2...|[4.69923926724613...|[0.46992392672461...|       1.0|\n",
       "+-----+--------------------+--------------------+--------------------+--------------------+--------------------+----------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -245,20 +237,10 @@
     {
      "data": {
       "text/plain": [
-       "predictionsDF = [label: int, tweet: string ... 5 more fields]\n"
+       "predictionsDF: org.apache.spark.sql.DataFrame = [label: int, tweet: string ... 5 more fields]\n"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data",
-     "source": "user"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[label: int, tweet: string ... 5 more fields]"
-      ]
-     },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -300,26 +282,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "getProbability = UserDefinedFunction(<function1>,DoubleType,Some(List(org.apache.spark.ml.linalg.VectorUDT@3bfc3ba7)))\n"
+       "import org.apache.spark.sql.functions._\n",
+       "getProbability: org.apache.spark.sql.expressions.UserDefinedFunction = SparkUserDefinedFunction($Lambda$5087/0x00000008419df840@7f9ad6cb,DoubleType,List(Some(class[value[0]: vector])),None,false,true)\n"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data",
-     "source": "user"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "UserDefinedFunction(<function1>,DoubleType,Some(List(org.apache.spark.ml.linalg.VectorUDT@3bfc3ba7)))"
-      ]
-     },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,37 +305,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------------+\n",
-      "|   clean_probability|\n",
-      "+--------------------+\n",
-      "|  0.7111575407821638|\n",
-      "|  0.1368199979525787|\n",
-      "| 0.17294671982654294|\n",
-      "|  0.4445137910464639|\n",
-      "| 0.03783763627521808|\n",
-      "| 0.41759967706178364|\n",
-      "| 0.47539715389816023|\n",
-      "|  0.9129188858174033|\n",
-      "|  0.3039762575994954|\n",
-      "|  0.5326649357030571|\n",
-      "| 0.43906897034262354|\n",
-      "|  0.5978735997545096|\n",
-      "| 0.33322955625193856|\n",
-      "| 0.49135985941172383|\n",
-      "|0.048285817555255364|\n",
-      "| 0.21764493477468688|\n",
-      "| 0.26225986886404595|\n",
-      "|  0.5282380556536825|\n",
-      "|  0.7151514980011942|\n",
-      "|  0.7542266623347272|\n",
-      "+--------------------+\n",
+      "+-------------------+\n",
+      "|  clean_probability|\n",
+      "+-------------------+\n",
+      "| 0.5300760732753866|\n",
+      "| 0.5179450375093577|\n",
+      "|0.47414148323352634|\n",
+      "|0.48032300252607935|\n",
+      "| 0.5038017869104074|\n",
+      "|  0.493523549682455|\n",
+      "|0.49332751297247723|\n",
+      "| 0.5923063170518399|\n",
+      "|  0.505078305345407|\n",
+      "| 0.4909974038751022|\n",
+      "| 0.5139034718036193|\n",
+      "|0.47529570246457664|\n",
+      "|0.49704755116204347|\n",
+      "| 0.5132201526338107|\n",
+      "|0.48574248379315543|\n",
+      "| 0.4285555594179017|\n",
+      "|  0.493523549682455|\n",
+      "| 0.5139034718036193|\n",
+      "| 0.5487794397402259|\n",
+      "| 0.5300760732753866|\n",
+      "+-------------------+\n",
       "only showing top 20 rows\n",
       "\n"
      ]
@@ -371,21 +344,34 @@
    "source": [
     "predictionsDF.select(getProbability($\"probability\").alias(\"clean_probability\")).show"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Apache Toree - Scala",
+   "display_name": "spylon-kernel",
    "language": "scala",
-   "name": "apache_toree_scala"
+   "name": "spylon-kernel"
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
    "file_extension": ".scala",
+   "help_links": [
+    {
+     "text": "MetaKernel Magics",
+     "url": "https://metakernel.readthedocs.io/en/latest/source/README.html"
+    }
+   ],
    "mimetype": "text/x-scala",
    "name": "scala",
    "pygments_lexer": "scala",
-   "version": "2.11.12"
+   "version": "0.4.1"
   }
  },
  "nbformat": 4,
