--- a/module-3/hw-4-ml/spark_ml/notebooks/python_model_spark_inference.ipynb
+++ b/module-3/hw-4-ml/spark_ml/notebooks/python_model_spark_inference.ipynb
@@ -24,26 +24,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m \u001b[0mspark\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msparkContext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maddPyFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m\n",
-       "Add a .py or .zip dependency for all tasks to be executed on this\n",
-       "SparkContext in the future.  The C{path} passed can be either a local\n",
-       "file, a file in HDFS (or other Hadoop-supported filesystems), or an\n",
-       "HTTP, HTTPS or FTP URI.\n",
-       "\n",
-       ".. note:: A path can be added only once. Subsequent additions of the same path are ignored.\n",
-       "\u001b[0;31mFile:\u001b[0m      /usr/local/spark/python/pyspark/context.py\n",
-       "\u001b[0;31mType:\u001b[0m      method\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark.sparkContext.addPyFile?"
    ]
@@ -97,29 +78,11 @@
     {
      "data": {
       "text/plain": [
-       "Pipeline(memory=None,\n",
-       "         steps=[('tfidf',\n",
-       "                 TfidfVectorizer(analyzer='word', binary=False,\n",
-       "                                 decode_error='strict',\n",
-       "                                 dtype=<class 'numpy.float64'>,\n",
-       "                                 encoding='utf-8', input='content',\n",
-       "                                 lowercase=True, max_df=0.5, max_features=None,\n",
-       "                                 min_df=1, ngram_range=(1, 1), norm='l2',\n",
-       "                                 preprocessor=<function preprocessor at 0x7fe53c2ecd90>,\n",
-       "                                 smooth_idf=True, stop_words=None,\n",
-       "                                 strip_accents=None,...\n",
-       "                 RandomForestClassifier(bootstrap=True, class_weight=None,\n",
-       "                                        criterion='gini', max_depth=8,\n",
-       "                                        max_features='auto',\n",
-       "                                        max_leaf_nodes=None,\n",
-       "                                        min_impurity_decrease=0.0,\n",
-       "                                        min_impurity_split=None,\n",
-       "                                        min_samples_leaf=1, min_samples_split=2,\n",
-       "                                        min_weight_fraction_leaf=0.0,\n",
-       "                                        n_estimators=100, n_jobs=None,\n",
-       "                                        oob_score=False, random_state=None,\n",
-       "                                        verbose=0, warm_start=False))],\n",
-       "         verbose=False)"
+       "Pipeline(steps=[('tfidf',\n",
+       "                 TfidfVectorizer(max_df=0.75,\n",
+       "                                 preprocessor=<function preprocessor at 0x7f83114cb790>,\n",
+       "                                 tokenizer=<function tokenizer at 0x7f830b896040>)),\n",
+       "                ('clf', RandomForestClassifier(max_depth=8))])"
       ]
      },
      "execution_count": 4,
@@ -165,17 +128,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Object `raw_sentiment.rdd.mapPartitions` not found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# raw_sentiment.rdd?\n",
     "raw_sentiment.rdd.mapPartitions?"
@@ -194,9 +149,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -205,32 +159,14 @@
     {
      "data": {
       "text/plain": [
-       "Pipeline(memory=None,\n",
-       "         steps=[('tfidf',\n",
-       "                 TfidfVectorizer(analyzer='word', binary=False,\n",
-       "                                 decode_error='strict',\n",
-       "                                 dtype=<class 'numpy.float64'>,\n",
-       "                                 encoding='utf-8', input='content',\n",
-       "                                 lowercase=True, max_df=0.5, max_features=None,\n",
-       "                                 min_df=1, ngram_range=(1, 1), norm='l2',\n",
-       "                                 preprocessor=<function preprocessor at 0x7fe53c2ecd90>,\n",
-       "                                 smooth_idf=True, stop_words=None,\n",
-       "                                 strip_accents=None,...\n",
-       "                 RandomForestClassifier(bootstrap=True, class_weight=None,\n",
-       "                                        criterion='gini', max_depth=8,\n",
-       "                                        max_features='auto',\n",
-       "                                        max_leaf_nodes=None,\n",
-       "                                        min_impurity_decrease=0.0,\n",
-       "                                        min_impurity_split=None,\n",
-       "                                        min_samples_leaf=1, min_samples_split=2,\n",
-       "                                        min_weight_fraction_leaf=0.0,\n",
-       "                                        n_estimators=100, n_jobs=None,\n",
-       "                                        oob_score=False, random_state=None,\n",
-       "                                        verbose=0, warm_start=False))],\n",
-       "         verbose=False)"
+       "Pipeline(steps=[('tfidf',\n",
+       "                 TfidfVectorizer(max_df=0.75,\n",
+       "                                 preprocessor=<function preprocessor at 0x7f83114cb790>,\n",
+       "                                 tokenizer=<function tokenizer at 0x7f830b896040>)),\n",
+       "                ('clf', RandomForestClassifier(max_depth=8))])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,14 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/spark/python/pyspark/sql/session.py:366: UserWarning: Using RDD of dict to inferSchema is deprecated. Use pyspark.sql.Row instead\n",
+      "/usr/local/spark/python/pyspark/sql/session.py:398: UserWarning: Using RDD of dict to inferSchema is deprecated. Use pyspark.sql.Row instead\n",
       "  warnings.warn(\"Using RDD of dict to inferSchema is deprecated. \"\n"
      ]
     },
@@ -259,26 +195,26 @@
       "+------------+------+--------------------+\n",
       "|       proba|target|                text|\n",
       "+------------+------+--------------------+\n",
-      "|0.5117410825|     0|@switchfoot http:...|\n",
-      "|0.4668558814|     0|is upset that he ...|\n",
-      "|0.4928299519|     0|@Kenichan I dived...|\n",
-      "|0.4770469505|     0|my whole body fee...|\n",
-      "|0.4827217749|     0|@nationwideclass ...|\n",
-      "|0.4928299519|     0|@Kwesidei not the...|\n",
-      "|0.4768386614|     0|         Need a hug |\n",
-      "|0.5090893686|     0|@LOLTrish hey  lo...|\n",
-      "|0.4889620535|     0|@Tatiana_K nope t...|\n",
-      "|0.4928299519|     0|@twittera que me ...|\n",
-      "|0.4928299519|     0|spring break in p...|\n",
-      "|0.4928299519|     0|I just re-pierced...|\n",
-      "|0.4836410059|     0|@caregiving I cou...|\n",
-      "|0.4643773575|     0|@octolinz16 It it...|\n",
-      "|0.4887232311|     0|@smarrison i woul...|\n",
-      "|0.4711656719|     0|@iamjazzyfizzle I...|\n",
-      "|0.4682252626|     0|Hollis' death sce...|\n",
-      "|0.4913870628|     0|about to file taxes |\n",
-      "|0.5050384049|     0|@LettyA ahh ive a...|\n",
-      "|0.4978528469|     0|@FakerPattyPattz ...|\n",
+      "|0.5326245799|     0|@switchfoot http:...|\n",
+      "|0.4810538855|     0|is upset that he ...|\n",
+      "|0.5013524962|     0|@Kenichan I dived...|\n",
+      "|0.4833376119|     0|my whole body fee...|\n",
+      "|0.4949966852|     0|@nationwideclass ...|\n",
+      "|0.4947119967|     0|@Kwesidei not the...|\n",
+      "|0.4906158438|     0|         Need a hug |\n",
+      "|0.5147333489|     0|@LOLTrish hey  lo...|\n",
+      "|0.4775261167|     0|@Tatiana_K nope t...|\n",
+      "|0.5013524962|     0|@twittera que me ...|\n",
+      "|0.5013524962|     0|spring break in p...|\n",
+      "|0.5013524962|     0|I just re-pierced...|\n",
+      "|0.4892071449|     0|@caregiving I cou...|\n",
+      "|0.4580293207|     0|@octolinz16 It it...|\n",
+      "|0.4567889877|     0|@smarrison i woul...|\n",
+      "|0.4551137473|     0|@iamjazzyfizzle I...|\n",
+      "|0.4678241956|     0|Hollis' death sce...|\n",
+      "|0.4989632523|     0|about to file taxes |\n",
+      "|0.5158630215|     0|@LettyA ahh ive a...|\n",
+      "|0.5063556572|     0|@FakerPattyPattz ...|\n",
       "+------------+------+--------------------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -330,12 +266,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "spark.stop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -354,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
